# JIT-Compiler

./: AST.cpp  AST.h  AbstractIRGen.h  CMakeCache.txt  CMakeLists.txt  DebugInfo.h  Executor.cpp  Executor.h  IRGen.cpp  IRGen.h  JIT.h  LLVMIRGen.cpp  LLVMIRGen.h  LangDefs.h  LangOps.h  Lexer.cpp  Lexer.h  NOTICE.txt  Optimizer.cpp  Optimizer.h  Parser.cpp  Parser.h  Runtime.cpp  build.ninja  cmake_install.cmake  main.cpp  rules.ninja
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: AST.h  DebugInfo.h  Executor.cpp  LLVMIRGen.cpp  LLVMIRGen.h  LangDefs.h  Lexer.cpp  Lexer.h  ListSymbolTable.h  MLIRGen.cpp  MLIRGen.h  Main.cpp  Runtime.cpp  SymbolTable.cpp  SymbolTable.h  main.cpp
tests/: a.out  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test2.c  test2.s  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt  teste.txt  testif.txt
